--- a/KarnelTravelAPI/appsettings.json
+++ b/KarnelTravelAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ConnectDB": "server=MSI\\DKC;database=KarnelTravelDB;User=sa;Password=123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
