--- a/KarnelTravelAPI/appsettings.json
+++ b/KarnelTravelAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectDB": "server=MSI\\DKC;database=KarnelTravelDB;User=sa;Password=123"
+    "ConnectDB": "server=.;database=KarnelTravelDB;uid=sa;pwd=123"
   },
   "Logging": {
     "LogLevel": {
