--- a/KarnelTravelAPI/KarnelTravelAPI.csproj
+++ b/KarnelTravelAPI/KarnelTravelAPI.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Service\" />
+    <Folder Include="uploads\TouristSpots\" />
   </ItemGroup>
 
 </Project>
