--- a/KarnelTravelAPI/appsettings.json
+++ b/KarnelTravelAPI/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "ConnectDB": "server=MSI\\DKC;database=KarnelTravelDB;User=sa;Password=123"
   },
+  "FileUploadSettings": {
+    "UploadsFolder": "images"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
