--- a/KarnelTravelAPI/appsettings.json
+++ b/KarnelTravelAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectDB": "Server=MINHHOANGCOMPUT;Database=EProject;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ConnectDB": "server=MSI\\DKC;database=KarnelTravelDB;User=sa;Password=123"
   },
   "FileUploadSettings": {
     "UploadsFolder": "uploads"
